services/seaweedfs-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-ingress
  namespace: services
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - s3.neurocollab.in
      secretName: s3-tls
  rules:
    - host: s3.neurocollab.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-filer
                port:
                  number: 8888
